--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NUKE LAUNCHER</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
@@ -36,6 +36,7 @@
         <button class="launchButton" id="launchButton">LAUNCH</button>
         <button class="clearButton" id="clearButton">CLEAR</button>
     </main>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/mobile.js"></script>
 </body>
 </html>
